# discount-program

./: Anchor.toml  package-lock.json  package.json
keypairs/: program-id.json  update-authority.json
programs/rewards-center/: Cargo.toml
programs/rewards-center/src/: lib.rs
programs/rewards-center/src/discount/: init_discount.rs  mod.rs  state.rs
programs/rewards-center/src/payment/: state.rs
programs/rewards-center/src/reward_distribution/reward_distributor/: init_reward_distributor.rs
programs/rewards-center/src/reward_distribution/reward_entry/: claim_rewards.rs
programs/rewards-center/src/stake_entry/: mod.rs
programs/rewards-center/src/stake_entry/pnfts/: stake_pnft.rs  unstake_pnft.rs
programs/rewards-center/src/stake_pool/: init_pool.rs  update_pool.rs
sdk/: api.ts  constants.ts
sdk/idl/: rewards_center.json
tests/: init-discount.ts  init-pool.ts
